--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Магазин упаковки Cube</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
