v.0.44 - seo tags update

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500;600&family=Onest:wght@400;500&display=swap"
           rel="stylesheet">
+
+    <meta name="yandex-verification" content="03baca3b0318b7ac" />
+    <meta name="google-site-verification" content="TTkVGQbISZVkhpAhPDR714NBF5bp-Cco4ZBbrVRamIo" />
 </head>
 <body>
 <div id="app"></div>
