v.0.47 - SEO OG & Twitter cards support

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="ru">
 <head>
+    <!-- Base -->
     <meta charset="UTF-8"/>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0"/>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>Магазин упаковки Cube</title>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
 
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -14,13 +15,45 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- SEO -->
+    <title>Магазин упаковки КУБ в Казани</title>
+    <meta name="description" content="Магазин упаковки КУБ в Казани предлагает качественные картонные коробки и упаковки для ваших товаров. Производство по индивидуальным размерам с печатью логотипа. Доставка по России.">
+    <meta name="keywords" content="картонные коробки Казань, упаковка для маркетплейсов, коробки для OZON, коробки Wildberries, индивидуальная упаковка, печать на коробках, производство упаковки">
+
+    <!-- OG cards -->
+    <meta property="og:title" content="Магазин упаковки КУБ в Казани">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cubekazan.ru">
+    <meta property="og:description" content="Магазин упаковки КУБ в Казани предлагает качественные картонные коробки и упаковки для ваших товаров. Производство по индивидуальным размерам с печатью логотипа. Доставка по России.">
+    <meta property="og:site_name" content="Cubekazan">
+    <meta property="og:locale" content="ru_RU">
+    <meta property="og:image" content="https://cubekazan.ru/images/meta-img.png">
+    <meta property="og:image:alt" content="Главная страница cubekazan.ru">
+
+    <!-- Twitter cards -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="https://cubekazan.ru">
+    <meta name="twitter:title" content="Магазин упаковки КУБ в Казани">
+    <meta name="twitter:description" content="Магазин упаковки КУБ в Казани предлагает качественные картонные коробки и упаковки для ваших товаров. Производство по индивидуальным размерам с печатью логотипа. Доставка по России.">
+    <meta name="twitter:image" content="https://cubekazan.ru/images/meta-img.png">
+    <meta name="twitter:image:alt" content="Главная страница cubekazan.ru">
+
+    <!-- Other -->
+    <meta name="robots" content="index, follow"/>
+    <meta name="author" content="Магазин упаковки КУБ в Казани"/>
+    <meta name="language" content="ru"/>
+    <meta name="copyright" content="Магазин упаковки КУБ в Казани"/>
+    <link rel="canonical" href="https://cubekazan.ru">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@500;600&family=Onest:wght@400;500&display=swap"
           rel="stylesheet">
 
-    <meta name="yandex-verification" content="03baca3b0318b7ac" />
-    <meta name="google-site-verification" content="TTkVGQbISZVkhpAhPDR714NBF5bp-Cco4ZBbrVRamIo" />
+    <!-- Verifications -->
+    <meta name="yandex-verification" content="03baca3b0318b7ac"/>
+    <meta name="google-site-verification" content="TTkVGQbISZVkhpAhPDR714NBF5bp-Cco4ZBbrVRamIo"/>
 </head>
 <body>
 <div id="app"></div>
